package transaction;

service TransactionController{
  rpc healthCheck(Void) returns (Reason){}
}

message Void{

}

message Reason{
  optional string reason = 1;
}
